bk_ida/gccida/g1/insn_cuid
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/insn_cuid/src/combine.c:13225:9: error: use of undeclared identifier 'MEMORY'
rtint = MEMORY[8]; 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/insn_cuid/src/combine.c:13226:6: error: use of undeclared identifier 'MEMORY'
if ( MEMORY[8] > max_uid_cuid ) 
     ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/insn_cuid/src/obj/combine.o] Error 1
